login ve register

--- a/BlogProject/Views/Account/Register.cshtml
+++ b/BlogProject/Views/Account/Register.cshtml
@@ -1,45 +1,62 @@
-﻿@{
+﻿@model AccountUserVM;
+
+@{
     ViewData["Title"] = "Register";
     Layout = "~/Views/Shared/_AnonymousLayout.cshtml";
 }
 
-<div class="card">
+<div class="card card-info">
     <div class="card-body register-card-body">
-        <p class="login-box-msg">Register a new membership</p>
+        <p class="login-box-msg">Kayıt Ol</p>
 
-        <form action="../../index.html" method="post">
+
+        @if (ViewData["Mesaj"] != null)  // eğer viewdata geliyorsa...
+        {
+            <div class="alert alert-primary">
+                @ViewData["Mesaj"] <!--view datayı yazdır...-->
+                <a asp-action="Login" asp-controller="Account">Giriş Yapmak İçin Tıklayınız...</a>
+            </div>
+        }
+
+        <form asp-action="Register" asp-controller="Account" method="post">
+            <span asp-validation-for="@Model.FullName" class="text-danger"></span>
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Full name">
+                <input asp-for="@Model.FullName" type="text" class="form-control" placeholder="Full name">
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <span class="fas fa-user"></span>
                     </div>
                 </div>
             </div>
+            <span asp-validation-for="@Model.Email" class="text-danger"></span>
             <div class="input-group mb-3">
-                <input type="email" class="form-control" placeholder="Email">
+                <input asp-for="@Model.Email" type="email" class="form-control" placeholder="Email">
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <span class="fas fa-envelope"></span>
                     </div>
                 </div>
             </div>
+
+            <span asp-validation-for="@Model.Password" class="text-danger"></span>
             <div class="input-group mb-3">
-                <input type="password" class="form-control" placeholder="Password">
+                <input asp-for="@Model.Password" type="password" class="form-control" placeholder="Password">
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <span class="fas fa-lock"></span>
                     </div>
                 </div>
             </div>
+            <span asp-validation-for="@Model.Password2" class="text-danger"></span>
             <div class="input-group mb-3">
-                <input type="password" class="form-control" placeholder="Retype password">
+                <input asp-for="@Model.Password2" type="password" class="form-control" placeholder="Retype password">
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <span class="fas fa-lock"></span>
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-8">
                     <div class="icheck-primary">
@@ -51,7 +68,7 @@
                 </div>
                 <!-- /.col -->
                 <div class="col-4">
-                    <button type="submit" class="btn btn-primary btn-block">Register</button>
+                    <button type="submit" class="btn btn-primary btn-block">Kayıt Ol</button>
                 </div>
                 <!-- /.col -->
             </div>
@@ -69,7 +86,11 @@
             </a>
         </div>
 
-        <a href="login.html" class="text-center">I already have a membership</a>
+        <a asp-action="Login" asp-controller="Account" class="text-center">I already have a membership</a>
     </div>
     <!-- /.form-box -->
 </div><!-- /.card -->
+
+@section ValidationScripts{
+    @Html.Partial("_ValidationScriptsPartial")
+}
