--- a/BlogProject/Views/_ViewImports.cshtml
+++ b/BlogProject/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using BlogProject
+@using BlogProject.Models <!--Viewlarda namespace belirtmemek için namespacei ekledik...-->
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<!--tag helper yazabilmek için -->
