--- a/BlogProject/Views/Home/Index.cshtml
+++ b/BlogProject/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <section class="cta-section theme-bg-light py-5">
