--- a/BlogProject/Views/Shared/_Layout.cshtml
+++ b/BlogProject/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.7.1/js/all.js" integrity="sha384-eVEQC9zshBn0rFj4+TU78eNA19HMNigMviK/PU/FFjLXqa/GKPgX58rvt5Z8PLs7" crossorigin="anonymous"></script>
 
     <!-- Theme CSS -->
-    <link id="theme-style" rel="stylesheet" href="assets/css/theme-1.css">
+    <link id="theme-style" rel="stylesheet" href="/assets/css/theme-1.css">
 </head>
 
 <body>
@@ -32,9 +32,14 @@
 
                 <div id="navigation" class="collapse navbar-collapse flex-column">
                     <div class="profile-section pt-3 pt-lg-0">
-                        <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png" alt="image">
+                        <img class="profile-image mb-3 rounded-circle mx-auto" src="/assets/images/profile.png" alt="image">
 
-                        <div class="bio mb-3">Hi, my name is Anthony Doe. Briefly introduce yourself here. You can also provide a link to the about page.<br><a asp-action="Index" asp-controller="AboutMe">Find out more about me</a></div><!--//bio-->
+                        <div class="bio mb-3">
+                            Hi, my name is Anthony Doe. Briefly introduce yourself here. You can also provide a link to the about page.<br><a asp-action="Index" asp-controller="AboutMe">Find out more about me</a>
+                            <br />
+                            <a asp-action="Login" asp-controller="Account">Giriş Yap veya Kayıl Ol</a>
+                        </div><!--//bio-->
+
                         <ul class="social-list list-inline py-3 mx-auto">
                             <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
@@ -56,7 +61,7 @@
                             <a class="nav-link" href="@Url.Action("Index", "AboutMe")"><i class="fas fa-user fa-fw mr-2"></i>Hakkımda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-action="Index" asp-controller="Home" asp-area="Admin"><i class="fas fa-user fa-fw mr-2"></i> Yönetim Paneline Git...</a> 
+                            <a class="nav-link" asp-action="Index" asp-controller="Home" asp-area="Admin"><i class="fas fa-user fa-fw mr-2"></i> Yönetim Paneline Git...</a>
                             @*<a href="@Url.Action("Index", "Home", new { area="Admin" })">Yönetim Paneli 2</a>*@
                         </li>
                     </ul>
@@ -96,12 +101,12 @@
     </div>
 
     <!-- Javascript -->
-    <script src="assets/plugins/jquery-3.3.1.min.js"></script>
-    <script src="assets/plugins/popper.min.js"></script>
-    <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/assets/plugins/jquery-3.3.1.min.js"></script>
+    <script src="/assets/plugins/popper.min.js"></script>
+    <script src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
-    <script src="assets/js/demo/style-switcher.js"></script>
+    <script src="/assets/js/demo/style-switcher.js"></script>
 
 
     <script>
