--- a/BlogProject/Views/Shared/_Layout.cshtml
+++ b/BlogProject/Views/Shared/_Layout.cshtml
@@ -22,22 +22,37 @@
 
     <div id="dvPage" style="display:none;">
         <header class="header text-center">
-            <h1 class="blog-name pt-lg-4 mb-0"><a asp-action="Index" asp-controller="Home">Anthony's Blog</a></h1>
+            <h1 class="blog-name pt-lg-4 mb-0">
+                <a asp-action="Index" asp-controller="Home">
+
+                    @if (User.Identity.IsAuthenticated) // kullanıcı oturum açtıysa
+                    {
+                        <span>Hoş geldin</span> @User.Identity.Name
+                    }
+                </a>
+            </h1>
 
             <nav class="navbar navbar-expand-lg navbar-dark">
-
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div id="navigation" class="collapse navbar-collapse flex-column">
                     <div class="profile-section pt-3 pt-lg-0">
                         <img class="profile-image mb-3 rounded-circle mx-auto" src="/assets/images/profile.png" alt="image">
-
+                        <br />
                         <div class="bio mb-3">
                             Hi, my name is Anthony Doe. Briefly introduce yourself here. You can also provide a link to the about page.<br><a asp-action="Index" asp-controller="AboutMe">Find out more about me</a>
                             <br />
-                            <a asp-action="Login" asp-controller="Account">Giriş Yap veya Kayıl Ol</a>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <a asp-action="UpdateProfile" asp-controller="Account">Profil Resmini Güncelle</a>
+                                <br />
+                                <a asp-action="LogOut" asp-controller="Account">Çıkış Yap</a>
+                            }
+                            else
+                            {
+                                <a asp-action="Login" asp-controller="Account">Giriş Yap veya Kayıl Ol</a>
+                            }
                         </div><!--//bio-->
 
                         <ul class="social-list list-inline py-3 mx-auto">
