--- a/BlogProject/Views/_ViewImports.cshtml
+++ b/BlogProject/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using BlogProject
 @using BlogProject.Models <!--Viewlarda namespace belirtmemek için namespacei ekledik...-->
+@using BlogProject.Models.Entities
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <!--tag helper yazabilmek için -->
