Content ekranı revize ve subscribe ekleme

--- a/BlogProject/Areas/Admin/Views/Contents/Edit.cshtml
+++ b/BlogProject/Areas/Admin/Views/Contents/Edit.cshtml
@@ -10,7 +10,7 @@
 
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div class="card card-info">
                 <div class="card-header">
@@ -26,7 +26,8 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Text" class="control-label"></label>
-                        <input asp-for="Text" class="form-control" />
+                        <textarea asp-for="Text"></textarea>
+
                         <span asp-validation-for="Text" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -52,4 +53,11 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <link href="~/plugins/summernote/summernote.css" rel="stylesheet" />
+    <script src="~/plugins/summernote/summernote.js"></script>
+
+    <script>
+        $("#Text").summernote();
+    </script>
 }
