--- a/BlogProject/Areas/Admin/Views/Shared/_Sablon.cshtml
+++ b/BlogProject/Areas/Admin/Views/Shared/_Sablon.cshtml
@@ -199,19 +199,19 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="../../index.html" class="nav-link">
+                                    <a asp-action="Index" asp-controller="Categories" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Kategori Yönetimi</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../../index2.html" class="nav-link">
+                                    <a asp-action="Index" asp-controller="Contents" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>İçerik Yönetimi</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../../index3.html" class="nav-link">
+                                    <a asp-action="Index" asp-controller="Comments" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Yorum Yönetim</p>
                                     </a>
