--- a/BlogProject/wwwroot/css/mySite.css
+++ b/BlogProject/wwwroot/css/mySite.css
@@ -34,6 +34,9 @@
     color:white;
 }
 
-#MenuClose{
-    cursor:pointer;
+#MenuClose {
+    cursor: pointer;
+    text-align: right;
+    padding-right: 20px;
+    color: white;
 }
