unobtrusive-ajax script..

--- a/BlogProject/Views/Home/Index.cshtml
+++ b/BlogProject/Views/Home/Index.cshtml
@@ -92,3 +92,13 @@
     <small class="copyright">Designed with <i class="fas fa-heart" style="color: #fb866a;"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
 
 </footer>
+
+
+
+@section PageScript{ 
+
+    <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.js"></script>
+
+
+}
+
