--- a/BlogProject/Views/Shared/_Subscribe.cshtml
+++ b/BlogProject/Views/Shared/_Subscribe.cshtml
@@ -4,12 +4,25 @@
     <div class="container text-center">
         <h2 class="heading">DevBlog - A Blog Template Made For Developers</h2>
         <div class="intro">Bloğuma hoş geldiniz.Makalelerden haberdar olabilmek için abone olunuz.</div>
-        <form class="signup-form form-inline justify-content-center pt-3" method="post" asp-action="PostSubscribe" asp-controller="Home">
+        <form class="signup-form form-inline justify-content-center pt-3" method="post" asp-action="PostSubscribe" data-ajax="true" data-ajax-success="SuccessEmail" asp-controller="Home">
             <div class="form-group">
-                <label class="sr-only" for="semail">Email Adresiniz</label>
+                <label class="sr-only" for="semail">Email </label>
                 <input type="email" id="semail" name="semail1" class="form-control mr-md-1 semail" placeholder="Enter email">
             </div>
             <button type="submit" class="btn btn-primary">Abone Ol</button>
         </form>
     </div><!--//container-->
 </section>
+
+<script>
+    function SuccessEmail(resp) {
+
+        console.log(resp);
+
+        if (resp.Code == 0) {
+            alert("Heyyo abonesyim abone..");
+        }
+        
+
+    }
+</script>
