--- a/BlogProject/Views/Shared/_Subscribe.cshtml
+++ b/BlogProject/Views/Shared/_Subscribe.cshtml
@@ -7,7 +7,7 @@
         <form class="signup-form form-inline justify-content-center pt-3" method="post" asp-action="PostSubscribe" data-ajax="true" data-ajax-success="SuccessEmail" asp-controller="Home">
             <div class="form-group">
                 <label class="sr-only" for="semail">Email </label>
-                <input type="email" id="semail" name="semail1" class="form-control mr-md-1 semail" placeholder="Enter email">
+                <input type="email" id="semail" name="semail1" class="form-control mr-md-1 semail" placeholder="Emailinizi girin" autocomplete="off">
             </div>
             <button type="submit" class="btn btn-primary">Abone Ol</button>
         </form>
@@ -17,12 +17,27 @@
 <script>
     function SuccessEmail(resp) {
 
-        console.log(resp);
 
-        if (resp.Code == 0) {
-            alert("Heyyo abonesyim abone..");
+        var messageDiv = $("#dvSiteMessage"); // divi yakala
+
+        messageDiv.removeClass("alert-info"); // varsa bu classı sil
+        messageDiv.removeClass("alert-danger"); // varsa bu classı sil
+
+        if (resp.Code == 0) {// işlem başarılıysa
+            messageDiv.addClass("alert-info"); // başarılı class ekle
         }
-        
+        else {
+            messageDiv.addClass("alert-danger"); // başarısız classı ekle
+        }
 
+        $("#semail").val(""); // inputun valuesını sil...
+        messageDiv.html(resp.Message); // içeriği dvin içeine ekle
+
+        messageDiv.fadeIn(); // divi göster...
+
+        // 3 saniye sonra divi gizle...
+        setTimeout(function () {
+            messageDiv.fadeOut();
+        }, 3000); // 3 saniye sonra çalışr
     }
 </script>
