--- a/BlogProject/Areas/Admin/Views/Contents/Edit.cshtml
+++ b/BlogProject/Areas/Admin/Views/Contents/Edit.cshtml
@@ -24,6 +24,14 @@
                         <input asp-for="Title" class="form-control" />
                         <span asp-validation-for="Title" class="text-danger"></span>
                     </div>
+
+                    <div class="form-group">
+                        <label asp-for="ShortText" class="control-label"></label>
+                        <textarea asp-for="ShortText"></textarea>
+                        <span asp-validation-for="ShortText" class="text-danger"></span>
+                    </div>
+
+
                     <div class="form-group">
                         <label asp-for="Text" class="control-label"></label>
                         <textarea asp-for="Text"></textarea>
