--- a/BlogProject/Views/Shared/Components/Categories/Default.cshtml
+++ b/BlogProject/Views/Shared/Components/Categories/Default.cshtml
@@ -6,7 +6,9 @@
     @foreach (var item in Model)
     {
     <li class="nav-item">
-        <a class="nav-link" href="#">@item.Name</a>
+
+        <a class="nav-link" asp-action="Index" asp-controller="Posts" asp-route-id="@item.ID">@item.Name</a>
+
     </li>
     }
 </ul>
