--- a/BlogProject/Views/Posts/Detail.cshtml
+++ b/BlogProject/Views/Posts/Detail.cshtml
@@ -8,7 +8,7 @@
         <header class="blog-post-header">
             <h2 class="title mb-2">@Model.Title</h2>
 
-            <div class="meta mb-3"><span class="date">Published 3 months ago</span><span class="time">5 min read</span><span class="comment"><a href="#">4 comments</a></span></div>
+            <div class="meta mb-3"><span class="date">Published @Model.CreDate</span><span class="time">@Model.ViewCount read</span><span class="comment"><a href="#">@Model.Comments.Count comments</a></span></div>
 
         </header>
 
