comments ekleme ve gösterme...

--- a/BlogProject/Views/Posts/Detail.cshtml
+++ b/BlogProject/Views/Posts/Detail.cshtml
@@ -26,90 +26,87 @@
 
             <div class="container">
                 <div class="be-comment-block">
-                    <h1 class="comments-title">Comments (3)</h1>
-                    <div class="be-comment">
-                        <div class="be-img-comment">
-                            <a href="blog-detail-2.html">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="" class="be-ava-comment">
-                            </a>
-                        </div>
-                        <div class="be-comment-content">
+                    <h1 class="comments-title">Comments ( @Model.Comments.Count(c => c.IsApprove == true) )</h1>
 
-                            <span class="be-comment-name">
-                                <a href="blog-detail-2.html">Ravi Sah</a>
-                            </span>
-                            <span class="be-comment-time">
-                                <i class="fa fa-clock-o"></i>
-                                May 27, 2015 at 3:14am
-                            </span>
+                    @foreach (var item in Model.Comments.Where(c => c.IsApprove == true))
+                    {
+                        <div class="be-comment">
+                            <div class="be-img-comment">
+                                <a href="blog-detail-2.html">
+                                    <img src="~/UploadProfilePicture/@item.User.PicturePath" alt="" class="be-ava-comment">
+                                </a>
+                            </div>
+                            <div class="be-comment-content">
+                                <span class="be-comment-name">
+                                    <a href="#">@item.User.FullName</a>
+                                </span>
+                                <span class="be-comment-time">
+                                    <i class="fa fa-clock-o"></i>
+                                    @item.CreDate.ToShortDateString()
+                                </span>
+                                <p class="be-comment-text">
+                                    @item.Text
+                                </p>
+                            </div>
+                        </div>
+                    }
 
-                            <p class="be-comment-text">
-                                Pellentesque gravida tristique ultrices.
-                                Sed blandit varius mauris, vel volutpat urna hendrerit id.
-                                Curabitur rutrum dolor gravida turpis tristique efficitur.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="be-comment">
-                        <div class="be-img-comment">
-                            <a href="blog-detail-2.html">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="" class="be-ava-comment">
-                            </a>
-                        </div>
-                        <div class="be-comment-content">
-                            <span class="be-comment-name">
-                                <a href="blog-detail-2.html">Phoenix, the Creative Studio</a>
-                            </span>
-                            <span class="be-comment-time">
-                                <i class="fa fa-clock-o"></i>
-                                May 27, 2015 at 3:14am
-                            </span>
-                            <p class="be-comment-text">
-                                Nunc ornare sed dolor sed mattis. In scelerisque dui a arcu mattis, at maximus eros commodo. Cras magna nunc, cursus lobortis luctus at, sollicitudin vel neque. Duis eleifend lorem non ant. Proin ut ornare lectus, vel eleifend est. Fusce hendrerit dui in turpis tristique blandit.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="be-comment">
-                        <div class="be-img-comment">
-                            <a href="blog-detail-2.html">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="" class="be-ava-comment">
-                            </a>
-                        </div>
-                        <div class="be-comment-content">
-                            <span class="be-comment-name">
-                                <a href="blog-detail-2.html">Cüneyt ŞEN</a>
-                            </span>
-                            <span class="be-comment-time">
-                                <i class="fa fa-clock-o"></i>
-                                May 27, 2015 at 3:14am
-                            </span>
-                            <p class="be-comment-text">
-                                Cras magna nunc, cursus lobortis luctus at, sollicitudin vel neque. Duis eleifend lorem non ant
-                            </p>
-                        </div>
-                    </div>
-                    <form class="form-block">
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-6">
-                                <div class="form-group fl_icon">
-                                    <div class="icon"><i class="fa fa-user"></i></div>
-                                    <input class="form-input" type="text" placeholder="Your name">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <form class="form-block" asp-action="AddComment" asp-controller="Posts" data-ajax="true" data-ajax-success="OnSucessComment">
+                            <div class="row">
+                                <div class="col-xs-12 col-lg-12">
+                                    <div class="form-group">
+                                        <!--id = javascript, css ile yakalamk için.
+                                        name= server'dan yakalamak için-->
+                                        <textarea class="form-input" id="txtComment" name="text" required="" placeholder="Your text"></textarea>
+                                        <input type="hidden" name="contentId" value="@Model.ID" /> <!---görünmeyen input-->
+                                    </div>
                                 </div>
+                                <button type="submit" class="btn btn-primary pull-right">Gönder</button>
                             </div>
-                            <div class="col-xs-12 col-sm-6 fl_icon">
-                                <div class="form-group fl_icon">
-                                    <div class="icon"><i class="fa fa-envelope-o"></i></div>
-                                    <input class="form-input" type="text" placeholder="Your email">
-                                </div>
-                            </div>
-                            <div class="col-xs-12">
-                                <div class="form-group">
-                                    <textarea class="form-input" required="" placeholder="Your text"></textarea>
-                                </div>
-                            </div>
-                            <a class="btn btn-primary pull-right">submit</a>
-                        </div>
-                    </form>
+                        </form>
+
+                        @section PageScript{
+                            <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.js"></script>
+
+                            <script>
+                                function OnSucessComment(response) {
+
+                                    var messageDiv = $("#dvSiteMessage"); // message divini yakalıroyurz...
+
+                                    messageDiv.removeClass("alert-info"); // eklediğimiz sınıfları siliyoruz
+                                    messageDiv.removeClass("alert-danger"); // eklediğimiz sınıfları siliyoruz
+
+                                    if (response.Code == "0") { // işlem başarılıysa...
+                                        messageDiv.addClass("alert-info"); // başarılı css classı ekleriz
+                                    }
+                                    else {
+                                        messageDiv.addClass("alert-danger"); // başarısz css classı ekleriz
+                                    }
+
+                                    messageDiv.html(response.Message); // gelen mesajı div'e ekleriz..
+
+                                    messageDiv.fadeIn(); // div'i gösteririz
+
+                                    setTimeout(function () {
+                                        messageDiv.fadeOut(); // div'i gizle...
+                                    }, 3000);
+
+                                    $("#txtComment").val(""); // comment textareanın textini temizliyoruz...
+                                }
+                            </script>
+
+                        }
+
+                    }
+                    else
+                    {
+                        <p>YORUM YAPMAK İÇİN LÜTFEN  <a asp-action="Login" asp-controller="Account" asp-route-id="1">OTURUM AÇINIZ</a></p>
+
+
+
+                    }
                 </div>
             </div>
 
